# IA_AGENT

Evaluation_finale/: .gitignore  README.md  etat.py  graph.py  main.py  prompt.py  pyproject.toml  rag.py  report.py  test.py  test.xlsx  tool.py
IA_AGENTIQUE/: .gitignore  main.py  pyproject.toml
IA_AGENTIQUE/Chef personnel/: chefpersonnel.ipynb
IA_AGENTIQUE/Lab1/: prompt.ipynb
IA_AGENTIQUE/Lab2/: Agen2.ipynb  BaseModel.ipynb  SearchTool.ipynb  agent.ipynb
IA_AGENTIQUE/Lab3/: rag.ipynb  rag2.ipynb
IA_AGENTIQUE/Lab4/: agent_HTTP.py  agent_mcp.py  agent_mcp_localtime.py
IA_AGENTIQUE/Lab5/: agent_simple.py  langgraph.json  multiagent.py
IA_AGENTIQUE/Lab5/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
IA_AGENTIQUE/Lab6/: agent.ipynb  state_agent.ipynb
IA_AGENTIQUE/Lab7/: HILT_agent.ipynb
IA_AGENTIQUE/Lab8/: conditional_workflow.py  hello_graph.py  message_state.py  reducers_demo.py  two_step_workflow.py  workflow_loop.py
IA_AGENTIQUE/Lab9/: agent_node.py  hitl_workflow.py  tools_setup.py  tp_advanced_agent.py
IA_AGENTIQUE/resources/: mcp_local_server.py
