[project]
name = "evaluation-finale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
]
