[project]
name = "ia-agentique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "tavily>=1.1.0",
    "tiktoken>=0.13.0",
]
